Trying to fix umbotron background on mobile

--- a/app/assets/stylesheets/static_pages.css.sass
+++ b/app/assets/stylesheets/static_pages.css.sass
@@ -59,7 +59,7 @@ hr
   background-position: center
   background-size: 100%
   position: relative
-  @media (max-width: @iphone-screen)
+  @media (max-width: $iphone-screen)
     background-attachment: scroll
 
 
